fix: 최종 코드 리뷰 기반 버그 수정 및 품질 개선